# aoc-rust

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: day_result.rs  helpers.rs  lib.rs  main.rs
src/data/: day_1.txt
src/days/: day_1.rs
src/solutions/: day_1.rs  day_2.rs
src/year_2019/: day_1.rs
src/year_2022/: day_1.rs  day_1_2022.rs  day_2.rs  day_2_2022.rs  day_3.rs  day_3_2022.rs  mod.rs
src/year_2024/: day_1.rs  day_1_2024.rs  day_2.rs  day_2_2024.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  mod.rs
