[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"
authors = ["Mikko Mattila <9086012+mikkomattila@users.noreply.github.com>"]
description = "Advent of Code solutions in Rust"
readme = "README.md"
repository = "https://github.com/mikkomattila/aoc-rust"
publish = false

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
